<?xml version="1.0"?>
<package format="2">
  <name>robot_tutorials</name>
  <version>0.1.0</version>
  <description>The robot_tutorials package to demonstrate ROS concepts</description>
  
  <maintainer email="asskicker@todo.todo">asskicker</maintainer>
  
  <license>BSD</license>
  
   <url type="website">http://wiki.ros.org/robot_tutorials</url>

  <author email="hugo.celedonf@gmail.com">Hugo Celedon</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  
  </export>
</package>
